<resources>
    <string name="app_name">BatikHub</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Pindai</string>
    <string name="title_notifications">Riwayat</string>
    <string name="search">Masukan Nama Batik</string>
    <string name="masukan_gambar">Masukan Gambar</string>
    <string name="camera">Kamera</string>
    <string name="galery">Galeri</string>
    <string name="scan">Pindai Gambar</string>
    <string name="batik_image">Batik Image</string>
    <string name="persentase">: Persentase</string>
    <string name="nama_batik">Nama Batik</string>
    <string name="gambar_batik">Gambar Batik</string>
    <string name="motif_batik">Motif Batik</string>
    <string name="judul">Pelajari berbagai macam \nbatik yang ada di Indonesia!</string>
    <string name="deskripsi">Temukan fakta menarik dan sejarah di balik setiap motif batik. Tingkatkan pengetahuan kamu setiap harinya dengan konten eksklusif yang telah kami siapkan!</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="your_image_desc">Deskripsi Gambar</string>
    <string name="judul_halaman_2">Cari tahu nama motif \nbatik yang kamu miliki!</string>
    <string name="deskripsi_halaman_2">Temukan keindahan serta makna di balik setiap motif batik yang kamu miliki. Lestarikan warisan budaya kita dengan mengenal lebih dekat batik Indonesia!</string>
    <string name="sebelumnya">Sebelumnya</string>
    <string name="judul_halaman_3">Hac ut aliquam orci nunc sed erat nulla</string>
    <string name="deskripsi_halaman_3">Ipsum a urna ultrices sapien commodo. Phasellus condimentum viverra vehicula faucibus fringilla aliquam elementum quam. Libero nunc quis mi amet arcu egestas nulla dictumst.</string>
    <string name="selesai">Selesai</string>
    <string name="scanned_batik_image">scanned_batik_image</string>
    <string name="prediction_result">Batik Bali</string>
    <string name="button_text_daftar">Daftar</string>
    <string name="const_text_auth_question_register">Kamu sudah punya akun?</string>
    <string name="const_text_login">Masuk</string>
    <string name="const_text_name">Nama</string>

    <string name="UI_validation_invalid_email">Email format is invalid</string>
    <string name="UI_validation_empty_email_password_name">Field Name, Email and Password must be filled</string>
    <string name="UI_validation_password_rules">Password must contain at least 8 characters</string>
    <string name="UI_info_successful_register_user">New user registration is successful, please login using the registered email and password</string>
    <string name="const_text_email">Email</string>
    <string name="const_text_password">Password</string>
    <string name="button_text_masuk">Masuk</string>
    <string name="not_have_account">Kamu belum punya akun?</string>
    <string name="detail_batik">Nama Batik</string>
    <string name="asalmotif">AsalMotif</string>
    <string name="desc">desc</string>
    <string name="persen">66%</string>
    <string name="datee">23-05-2024 | 21:21</string>
    <string name="cari">Cari</string>
    <string name="titlehistory">nama : persentase</string>
    <string name="datehsitory">tgl-bulan-tahun</string>
    <string name="descprediction">DescPrediction</string>
</resources>