<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="374dp"
            android:layout_height="432dp"
            android:contentDescription="@string/your_image_desc"
            android:src="@drawable/batikhub" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/judul"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/base_label"
            android:lineSpacingExtra="4dp"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="6dp"
            android:paddingTop="8dp"
            android:paddingBottom="32dp"
            android:textColor="@color/base_secondary"
            android:text="@string/deskripsi" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_signin_button"
            android:textAllCaps="false"
            android:letterSpacing="0"
            app:backgroundTint="@null"
            android:textSize="16sp"
            android:text="@string/selanjutnya" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
