<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewScannedBatik"
        android:layout_width="378dp"
        android:layout_height="285dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/scanned_batik_image"
        android:src="@drawable/batikhub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPredictionResult"
        android:layout_width="289dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/prediction_result"
        android:textColor="@color/teal_200"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageViewScannedBatik"
        app:layout_constraintTop_toBottomOf="@+id/imageViewScannedBatik" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/datee"
        app:layout_constraintStart_toStartOf="@+id/textViewPredictionResult"
        app:layout_constraintTop_toBottomOf="@+id/textViewPredictionResult" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="368dp"
        android:layout_height="289dp"
        android:layout_marginTop="8dp"
        android:text="@string/descprediction"
        app:layout_constraintStart_toStartOf="@+id/imageViewScannedBatik"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>