<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="383dp"
            android:layout_height="388dp"
            android:contentDescription="@string/your_image_desc"
            android:src="@drawable/batikhub" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/judul_halaman_3"
            android:textColor="@color/base_label"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4dp"
            android:paddingTop="8dp"
            android:text="@string/deskripsi_halaman_3"
            android:textColor="@color/base_secondary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="32dp"
            android:weightSum="2">

            <Button
                android:id="@+id/buttonPrevious"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/custom_secondary_button"
                android:letterSpacing="0"
                android:text="@string/sebelumnya"
                android:textAllCaps="false"
                android:textColor="@color/base_label"
                android:textSize="16sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/buttonFinish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/custom_signin_button"
                android:letterSpacing="0"
                android:text="@string/selesai"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:backgroundTint="@null" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
