<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_preview_photo"
            android:layout_width="match_parent"
            android:layout_height="457dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/masukan_gambar"
            android:src="@drawable/baseline_image_24"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="16dp"
            android:weightSum="2"
            >

            <Button
                android:id="@+id/button_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_secondary_button"
                android:textAllCaps="false"
                android:text="@string/camera"
                android:layout_marginEnd="16dp"
                app:backgroundTint="@null"
                android:textColor="@color/base_label"
                android:letterSpacing="0"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/button_gallery"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_secondary_button"
                android:text="@string/galery"
                android:textAllCaps="false"
                app:backgroundTint="@null"
                android:textColor="@color/base_label"
                android:textSize="16sp"
                android:letterSpacing="0"/>

        </LinearLayout>

        <Button
            android:id="@+id/buttonPindai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/custom_signin_button"
            android:text="@string/scan"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:backgroundTint="@null"
            android:letterSpacing="0"
            />
    </LinearLayout>








</androidx.constraintlayout.widget.ConstraintLayout>