<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:background="?attr/selectableItemBackground">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/batik_image"
        android:src="@drawable/batikhub"
        android:scaleType="centerCrop"
        android:background="?attr/selectableItemBackgroundBorderless" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_batik"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:paddingBottom="2dp" />

            <TextView
                android:id="@+id/textViewPercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/persentase"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:paddingBottom="2dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="tgl-bulan-tahun | waktu"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
