<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.armand.batikhub.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_Page1Fragment"
            app:destination="@id/navigation_page1" />
        <action
            android:id="@+id/action_homeFragment_to_loginFragment"
            app:destination="@id/loginActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.armand.batikhub.ui.scan.ScanFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_pindai" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.armand.batikhub.ui.history.HistoryFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_riwayat" />

    <fragment
        android:id="@+id/navigation_page1"
        android:name="com.armand.batikhub.ui.info.Page1Fragment"
        android:label="Page1Fragment"
        tools:layout="@layout/fragment_page1">
        <action
            android:id="@+id/action_page1Fragment_to_page2Fragment"
            app:destination="@id/Page2Fragment" />
    </fragment>

    <fragment
        android:id="@+id/Page2Fragment"
        android:name="com.armand.batikhub.ui.info.Page2Fragment"
        android:label="Page2Fragment"
        tools:layout="@layout/fragment_page2">
        <action
            android:id="@+id/action_page2Fragment_to_page3Fragment"
            app:destination="@id/Page3Fragment" />
        <action
            android:id="@+id/action_page2Fragment_to_page1Fragment"
            app:destination="@id/navigation_page1" />
    </fragment>

    <fragment
        android:id="@+id/Page3Fragment"
        android:name="com.armand.batikhub.ui.info.Page3Fragment"
        android:label="Page3Fragment"
        tools:layout="@layout/fragment_page3">
        <action
            android:id="@+id/action_page3Fragment_to_homeFragment"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_page3Fragment_to_page2Fragment"
            app:destination="@id/Page2Fragment" />
    </fragment>

    <activity
        android:id="@+id/loginActivity"
        android:name="com.armand.batikhub.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/fragment_login" />
</navigation>